import { TabItem } from "../types/navigation.types";

export const TABS: TabItem[] = [
  { name: "Home", icon: "home-outline" },
  { name: "Resume", icon: "document-text-outline" },
  { name: "AI", icon: "flash-outline" },
  { name: "Profile", icon: "person-outline" },
];
